<resources>
    <string name="app_name">Water_Report</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="welcome_text">welcome_text</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="please_enter_password">Please Enter Password</string>
    <string name="please_enter_user_name">Please Enter User Name</string>
    <string name="logout">Logout</string>
    <string name="welcome">Welcome:</string>
    <string name="sign_in">Sign In</string>
    <string name="welcome_to_water_report">Welcome to Water Report</string>
    <string name="water_report">Water Report</string>
    <string name="enter_user_name_password">Enter User Name/Password</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_initial">InitialActivity</string>
    <string name="hello">Hello:</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_user_name">Enter User Name</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_e_mail">Enter e-mail</string>
    <string name="profile">Profile</string>
    <string name="textview">TextView</string>
    <string name="reenter_password">ReEnter Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="personal_profile">Personal Profile</string>
    <string name="condition" />
    <string name="contaminant">Contaminant</string>
    <string name="location">Location</string>
    <string name="type">Type</string>
    <string name="virus_ppm">Virus PPM</string>
    <string name="reports">REPORTS</string>
    <string name="submit_report">Submit Report</string>
    <string name="title_activity_maps">Map</string>
    <string name="map">MAP</string>
    <string name="contaminant_ppm">Contaminant PPM</string>
    <string name="conditionS">Condition</string>
    <string name="locationS">Location</string>
    <string name="submit_quality_report">Submit</string>
    <string name="virus_ppm_">Virus PPM</string>
    <string name="submit_purity_report">submit_purity_report</string>
</resources>
