<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_worker_welcome"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.weichen.water_report.controllers.WelcomActivity">


    <Button
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:onClick="logout"
        android:text="@string/logout"
        tools:ignore="MissingConstraints,RelativeOverlap,RtlHardcoded"
        tools:layout_editor_absoluteY="431dp"
        tools:layout_editor_absoluteX="268dp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/user_email"
        tools:ignore="RtlHardcoded"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="20sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="edit_profile"
        android:id="@+id/profile_button"
        tools:layout_editor_absoluteY="431dp"
        tools:layout_editor_absoluteX="1dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:text="@string/submit_report"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/welcom_submit_report"
        android:onClick = "welcom_submit_report"
        tools:layout_editor_absoluteY="107dp"
        tools:layout_editor_absoluteX="59dp"
        tools:ignore="MissingConstraints"
        android:layout_marginBottom="37dp"
        android:layout_above="@+id/welcome_submit_purity_report"
        android:layout_alignEnd="@+id/map_button"
        android:layout_marginEnd="21dp" />

    <Button
        android:id="@+id/view_report"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reports"
        android:onClick="view_report"
        tools:layout_editor_absoluteY="107dp"
        tools:layout_editor_absoluteX="196dp"
        tools:ignore="MissingConstraints"
        android:layout_alignBaseline="@+id/welcom_submit_report"
        android:layout_alignBottom="@+id/welcom_submit_report"
        android:layout_toEndOf="@+id/welcom_submit_report" />

    <Button
        android:id="@+id/map_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/map"
        android:onClick="map_button"
        tools:layout_editor_absoluteY="321dp"
        tools:layout_editor_absoluteX="121dp"
        tools:ignore="MissingConstraints"
        android:layout_below="@+id/welcome_submit_purity_report"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="61dp" />

    <Button
        android:id="@+id/welcome_submit_purity_report"
        android:layout_width="217dp"
        android:layout_height="41dp"
        android:text="@string/submit_purity_report"
        android:onClick="welcom_submit_purity_report"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/welcom_submit_report"
        android:layout_alignEnd="@+id/view_report"
        tools:layout_editor_absoluteY="184dp"
        tools:layout_editor_absoluteX="60dp"
        tools:ignore="MissingConstraints" />

</RelativeLayout>
