<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_welcom"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.weichen.water_report.controllers.WelcomActivity">


    <Button
        android:text="@string/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/logout"
        tools:ignore="RelativeOverlap,RtlHardcoded"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="logout"/>

    <TextView
        android:text="@string/please_enter_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/user_email"
        android:layout_marginLeft="14dp"
        tools:ignore="RtlHardcoded"
        android:layout_marginStart="14dp"
        tools:text="@string/please_enter_user_name"
        android:layout_alignBaseline="@+id/logout"
        android:layout_alignBottom="@+id/logout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="20sp" />

</RelativeLayout>
