<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_initial"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.weichen.water_report.controllers.InitialActivity">

    <Button
        android:text="@string/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/register_button"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/sign_in"
        android:layout_alignStart="@+id/sign_in"
        android:layout_marginBottom="167dp"
        android:onClick="toRegisterLayout"/>

    <TextView
        android:text="@string/water_report"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/welcome_waterReport"
        tools:ignore="RtlHardcoded"
        android:textSize="30sp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="89dp" />

    <Button
        android:text="@string/sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sign_in"
        android:layout_marginBottom="33dp"
        android:layout_above="@+id/register_button"
        android:layout_centerHorizontal="true">
    </Button>

</RelativeLayout>
