<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.weichen.water_report.controllers.Manager_Welcome_Activity">


    <Button
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:onClick="logout"
        android:text="@string/logout"
        tools:ignore="MissingConstraints,RelativeOverlap,RtlHardcoded"
        tools:layout_editor_absoluteY="462dp"
        tools:layout_editor_absoluteX="295dp" />


    <TextView
        android:id="@+id/user_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="18dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="24sp"
        tools:ignore="MissingConstraints,RtlHardcoded"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp" />

    <Button
        android:text="@string/profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="edit_profile"
        android:id="@+id/profile_button"
        tools:layout_editor_absoluteY="462dp"
        tools:layout_editor_absoluteX="0dp"
        tools:ignore="MissingConstraints,RtlHardcoded" />

    <Button
        android:text="@string/submit_report"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/welcom_submit_report"
        android:onClick = "welcom_submit_report"
        tools:layout_editor_absoluteY="102dp"
        tools:layout_editor_absoluteX="64dp"
        tools:ignore="MissingConstraints"
        android:layout_alignBaseline="@+id/view_report"
        android:layout_alignBottom="@+id/view_report"
        android:layout_alignStart="@+id/view_quality_report" />



    <Button
        android:id="@+id/view_report"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reports"
        android:onClick="view_report"
        tools:layout_editor_absoluteY="102dp"
        tools:layout_editor_absoluteX="207dp"
        tools:ignore="MissingConstraints"
        android:layout_marginTop="79dp"
        android:layout_below="@+id/user_email"
        android:layout_alignEnd="@+id/view_quality_report" />

    <Button
        android:id="@+id/map_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/map"
        android:onClick="map_button"
        tools:layout_editor_absoluteY="389dp"
        tools:layout_editor_absoluteX="148dp"
        tools:ignore="MissingConstraints"
        android:layout_above="@+id/profile_button"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="63dp" />

    <Button
        android:id="@+id/welcome_submit_purity_report"
        android:layout_width="231dp"
        android:layout_height="51dp"
        android:onClick="welcom_submit_purity_report"
        android:text="Submit Quailty Report"
        tools:layout_editor_absoluteX="64dp"
        tools:layout_editor_absoluteY="200dp"
        tools:ignore="HardcodedText,MissingConstraints"
        android:layout_marginTop="48dp"
        android:layout_below="@+id/welcom_submit_report"
        android:layout_alignStart="@+id/view_quality_report" />

    <Button
        android:id="@+id/view_quality_report"
        android:layout_width="228dp"
        android:layout_height="43dp"
        android:text="View Quality Report"
        tools:layout_editor_absoluteX="64dp"
        tools:layout_editor_absoluteY="282dp"
        android:onClick="view_quality_report"
        tools:ignore="HardcodedText,MissingConstraints"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/welcome_submit_purity_report"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
