<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.weichen.water_report.controllers.LoginActivity">


    <TextView
        android:text="Email Address: "
        android:layout_height="20sp"
        android:id="@+id/user_name_text"
        android:layout_width="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:layout_above="@+id/user_name_input"
        android:layout_alignLeft="@+id/user_name_input"
        android:layout_alignStart="@+id/user_name_input"
        tools:ignore="HardcodedText" />

    <TextView
        android:text="Password:"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/password_text"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/password_input"
        android:layout_alignStart="@+id/password_input"
        tools:ignore="HardcodedText" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/password_input"
        android:hint="@string/enter_password"
        android:layout_marginLeft="31dp"
        android:layout_marginStart="31dp"
        android:layout_below="@+id/password_text"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/user_name_input"
        android:hint="@string/enter_e_mail"
        android:layout_marginBottom="48dp"
        android:layout_above="@+id/password_text"
        android:layout_alignLeft="@+id/password_text"
        android:layout_alignStart="@+id/password_text" />

    <Button
        android:text="@string/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login_button"
        android:layout_marginTop="51dp"
        android:layout_below="@+id/password_input"
        android:layout_centerHorizontal="true"
        android:onClick="login"/>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="?attr/actionModeCloseDrawable"
        android:id="@+id/go_back_button"
        android:background="?android:attr/homeAsUpIndicator"
        android:onClick="goBack"
        android:contentDescription=""
        tools:ignore="ContentDescription"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


</RelativeLayout>
