<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.weichen.water_report.controllers.ProfileActivity">

    <TextView
        android:text="@string/textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:id="@+id/classes_user"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="?attr/homeAsUpIndicator"
        android:id="@+id/back_profile"
        android:onClick="back_profile"
        tools:ignore="ContentDescription"
        android:layout_marginRight="64dp"
        android:layout_marginEnd="64dp"
        android:layout_toLeftOf="@+id/profile_text"
        android:layout_toStartOf="@+id/profile_text" />

    <TextView
        android:text="Edit Profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/profile_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="24sp"
        tools:ignore="HardcodedText"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_marginTop="30dp"
        android:id="@+id/userphone_profile_input"
        android:hint="Phone Number"
        tools:ignore="HardcodedText"
        android:layout_below="@+id/username_profile_input"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/username_profile_input"
        android:hint="Name"
        tools:ignore="HardcodedText"
        android:layout_below="@+id/classes_user"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="16dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/userAddress_profile_input"
        android:hint="Address"
        tools:ignore="HardcodedText"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="Save &amp; Return"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/save_return_button"
        android:onClick="save_return"
        tools:ignore="HardcodedText"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/reset_password_RE"
        android:hint="@string/reenter_password"
        android:layout_above="@+id/save_return_button"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="30dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/reset_password"
        android:hint="@string/reset_password"
        android:layout_marginBottom="29dp"
        android:layout_above="@+id/reset_password_RE"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
